syntax = "proto3";

package greet;

message Greeting {
	string first_name = 1;
	string last_name = 2;
}

message GreetingManyTimesRequest {
	Greeting greeting = 1;
}

message GreetingManyTimesResponse {
	string result = 1;
}

service GreetingService {
	rpc Greet (GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse) {}
}
